Prepare v12 native calendar recovery release (#19)
* Compare published event fields and verify browser deployment paths

* Make source tables canonical and validate rule and delta citations

* Add dependency-free exact native date identity

* Add verified Hebrew native chronology compiler foundation

* Preserve native event provenance and close remaining multiset gaps

* Add explicit calendar trust and publication history bounds

* Carry native provenance and explicit unknown assessments through consumers

* Make calendar releases reviewable and reproducible

* Add evidence-bounded TASE calendar

* Validate cited support intervals and render explicit trust in HTML

* Audit calendar coverage quality and historical gaps

* Encode TASE evidence quality boundaries

* Reject malformed trust metadata and verify enriched consumer parity

* Harden release retries and descriptor verification

* docs: sync coverage and API guidance

* fix(scaffold): create audited coverage and source register

* docs: describe scaffold source register output

* Bind release retries to reviewed deliverables

* Bound publication evidence and keep scaffolds out of published data

* Make release preparation entry point executable

* Verify candidate trust semantics across all consumer fixtures

* Support independent software release streams

* Add bounded Chinese chronology and HKEX native rules

* Verify HKEX native provenance and authoritative overrides across consumers

* Retain HKO evidence for bounded Qingming table

* Preserve binary release evidence

* Publish payment calendars with explicit coverage quality

* Make native artifacts reproducible across JVM processes

* Report confidence across browser business-date offsets

* Emit complete release record deltas

* Add bounded wholesale payment calendars

* Clean shared generated test sites recursively

* Add confidence-aware financial date operations

* Verify financial operations across consumer boundaries

* Reconcile candidate docs with